Fix spacing of article elements in blog section

--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -18,14 +18,14 @@
   height: 60%;
   color: #fff;
   background: #042c54;
-  padding: 2rem 1.5rem;
+  padding: 1rem 1.5rem;
 }
 
-.article__description-title {
+.article__description h2 {
   font-weight: 800;
-  font-size: 25.11px;
+  font-size: 19.3154px;
   line-height: 30px;
-  /* or 121% */
+  /* or 157% */
 }
 .article__description p {
   font-weight: 700;
