--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,3 +1,33 @@
+.blog__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.blog__heading {
+  width: 60%;
+  font-weight: 800;
+  font-size: 2rem;
+  line-height: 5.5rem;
+  /* or 121% */
+  letter-spacing: -0.04em;
+}
+
+.blog__articles__container {
+  margin: 5rem 0;
+  display: grid;
+  gap: 3rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+.blog__articles__container :first-child {
+  grid-area: 1/1/3/2;
+}
+.blog__articles__container :first-child h2 {
+  font-size: 25.11px;
+  line-height: 30px;
+  /* or 121% */
+}
+
 @media screen and (max-width: 1050px) {
 }
 
